# mlops-platform-cli

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docker/training/: BUILD_GPU_IMAGE.md  Dockerfile.pytorch  Dockerfile.sklearn  Dockerfile.tensorflow  build-and-push.sh  requirements-common.txt  requirements-pytorch.txt  requirements-tensorflow.txt
mlp/: __init__.py  cli.py  config.py
mlp/commands/: __init__.py  experiment.py  init.py  model.py
mlp/templates/common/: .dvcignore.j2  .gitignore.j2  README.md.j2  config.yaml.j2
mlp/templates/pytorch/: requirements.txt.j2  train.py.j2
mlp/templates/simple/: requirements.txt.j2  train.py.j2
mlp/templates/sklearn/: requirements.txt.j2  train.py.j2
mlp/templates/tensorflow/: requirements.txt.j2  train.py.j2
mlp/utils/: __init__.py  k8s.py  logger.py  templates.py  validators.py
terraform/aws/: .gitignore  BUILD_MLFLOW_IMAGE.md  Dockerfile.mlflow  GPU_WORKLOADS.md  README.md  ecr.tf  eks.tf  gpu-nodepool.yaml  iam.tf  karpenter-gpu.tf  main.tf  mlflow.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf
tests/: __init__.py  test_experiment.py  test_init.py
